--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,7 +3,7 @@
 name: Java CI with Maven
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
 
 
 
@@ -13,7 +13,7 @@ defaults:
     
 jobs:
   build:
-    runs-on: [self-hosted, linux, x64, main]
+    runs-on: [self-hosted, linux, x64, dev]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
